--- a/_posts/2015-12-31-year-in-review-2015.markdown
+++ b/_posts/2015-12-31-year-in-review-2015.markdown
@@ -2,11 +2,7 @@
 layout: post
 title:  "Year In Review - 2015"
 date:   2015-12-31
-<<<<<<< HEAD
-permalink: /writing/year-in-review-2015
-=======
 permalink: /writing/year-in-review-2015.html
->>>>>>> develop
 summary: A retrospective on my year professionaly and personally in 2015. 
 crosspost_to_medium: true
 ---
@@ -86,7 +82,7 @@ I had a goal to create 12 things in 2015 but failed horribly. While freelancing 
 
 I plan on baking more (some friends know about this) and putting on a few more Beta Tasting events throughout the year, too. The truth, though, is baking 100 cookies for friends/people is really time consuming and costly so I’m thinking about doing them in smaller batches or increase ticket quantity to make up for the cost of ingredients and time.
 
-Sidenote: If you want to stay in the loop, I’ve got a mailing list you can subscribe as well. 
+Sidenote - If you want to stay in the loop about cookies, I’ve got a [mailing list you can subscribe as well](http://pbj.im/spiltmilksignup). 
 
 ---
 
