--- a/_posts/2015-12-31-year-in-review-2015.markdown
+++ b/_posts/2015-12-31-year-in-review-2015.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "Year In Review - 2015"
 date:   2015-12-31
 permalink: /writing/year-in-review-2015.html
-summary: A retrospective on my year professionaly and personally in 2015. 
+summary: "A retrospective on my year professionaly and personally in 2015.""
 crosspost_to_medium: true
 ---
 
