--- a/404.md
+++ b/404.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Woops! 404 Error."
 permalink: /404.html
 cta: Go Home
+exclude: true
 ---
 
 <p class="text-center">The page you're looking for doesn't exist. Sorry home slice. </p>
