--- a/_fire-meetup/june-12-2017.markdown
+++ b/_fire-meetup/june-12-2017.markdown
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Week 3 - June 12, 2017"
+title:  "Month 3 - June 12, 2017"
 date:   2017-06-12
-permalink: /fire-meetup/week-3.html
+permalink: /fire-meetup/month-3.html
 display: active
 exclude: true
 ---
