--- a/_fire-meetup/may-02-2017.markdown
+++ b/_fire-meetup/may-02-2017.markdown
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Week 2 - May 01, 2017"
+title:  "Month 2 - May 01, 2017"
 date:   2017-05-01
-permalink: /fire-meetup/week-2.html
+permalink: /fire-meetup/month-2.html
 display: active
 exclude: true
 ---
